# GLASS

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  glass-defaults.cuh  glass-nvidia.cuh  glass.cuh
.github/workflows/: ci.yml  verify-gpu-proof.yml
bench/: .gitignore  BLAS2_SWEEP_RESULTS.md  PAPER_SWEEPS.md  RECT_SWEEP_RESULTS.md  REDUCED_SWEEP_RESULTS.md  SOLVERS_SWEEP_RESULTS.md  THREAD_SWEEP_RESULTS.md  TUNING.md  bench_blas2.cu  bench_gemm.cu  bench_gemv.cu  bench_lapack.cu  bench_mega_sweep.cu  bench_paper_fusion.cu  bench_paper_hostblas.cu  bench_rect.cu  bench_reduce.cu  bench_solvers.cu  export_sweep_figures.py  paper_fusion_20260708_0055.txt  paper_fusion_20260708_1524.txt  paper_hostblas_20260708_0054.txt  paper_sweeps.py  run_bench.py  tune.py  tune_pick.py
docs/: STARTUP_PROMPT.md  agent_debugging_guide.md
docs/source/: index.rst
docs/source/_static/: sweep_winners.txt
docs/source/api_reference/: banded.rst  defaults.rst  l1.rst  l3.rst  warp.rst
docs/source/user_guide/concepts/: batching.rst  contraction_parallel.rst  namespaces.rst  trailing_sync.rst  tuning.rst
docs/source/user_guide/getting_started/: library_overview.rst
docs/source/user_guide/tutorials/: benchmarks.rst  examples.rst  quickstart.rst  sweep_results.rst  using_nvidia_backend.rst
examples/: .gitignore  07_warp_ops.cu  14_ldlt_solve.cu  15_riccati_gain.cu  16_inv.cu  CMakeLists.txt  Makefile  README.md
src/base/: barrier.cuh  flags.cuh
src/base/L1/: axpy.cuh  dot.cuh  ident.cuh  norm.cuh  reduce.cuh  rot.cuh  symmetrize.cuh
src/base/L2/: gemv.cuh  gemv_reduced.cuh  gemv_segmented.cuh  gemv_strided.cuh  trsv.cuh
src/base/L3/: congruence.cuh  gemm.cuh  gemm_reduced.cuh  gemm_strided.cuh  getrf.cuh  inv.cuh  ldlt.cuh  posv.cuh  potrf.cuh  riccati.cuh  syev.cuh  symm.cuh  syrk.cuh  syrk_reduced.cuh  trsm.cuh
src/base/banded/: bdsv.cuh
src/cgrps/: l1.cuh  l2.cuh  l3.cuh
src/nvidia/: lapack.cuh  tuning_table.cuh
test/: conftest.py  expected_skips.txt  gpu-proof.json  requirements.txt  run_gpu_proof.sh  run_sanitizer.sh  test_bdsv.py  test_factor_check.py  test_fused.py  test_getrf.py  test_l1.py  test_l2.py  test_l3.py  test_ldlt.py  test_nvidia_dispatch.py  test_reduced.py  test_reduced_blas.py  test_syev.py  test_symm_rot.py  test_symmetrize.py  test_syrk.py  test_thread.py
test/cuda/: test_base_f64.cu  test_bdsv.cu  test_congruence.cu  test_defaults.cu  test_factor_check.cu  test_fused.cu  test_getrf.cu  test_l1.cu  test_l2.cu  test_l3.cu  test_ldlt.cu  test_nvidia_dispatch.cu  test_solve.cu  test_syev.cu  test_symm_rot.cu  test_symmetrize.cu  test_thread.cu  test_trsv.cu  test_warp.cu
